--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pengenalan Tugas 1</title>
+    <title>PORTOFOLIO SAYA</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -125,7 +125,7 @@
                     </tr>
                     <tr>
                         <th>Umur</th>
-                        <td>22 Tahun</td>
+                        <td>Tahun</td>
                     </tr>
                     <tr>
                         <th>Hobi</th>
@@ -147,7 +147,7 @@
 
     <!-- FOOTER BAWAH -->
     <footer>
-        <p>Tugas 1  &#169; 2024, Faaiq Sean</p>
+        <p>PORTOFOLIO  &#169; 2025, Faaiq Sean</p>
     </footer>
 
     <script src="java_script/script.js"></script>
